HEEDLS-506 Fix spacing on buttons

--- a/DigitalLearningSolutions.Web/Styles/trackingSystem/delegates/delegateGroups.scss
+++ b/DigitalLearningSolutions.Web/Styles/trackingSystem/delegates/delegateGroups.scss
@@ -1,9 +1,13 @@
 ﻿@import 'delegateCommon';
 
 .nhsuk-details__text > .nhsuk-button {
-  @include govuk-media-query($from: desktop) {
-    margin-right: nhsuk-spacing(2);
-    margin-bottom: nhsuk-spacing(0) !important;
+  margin-right: nhsuk-spacing(2);
+  margin-bottom: nhsuk-spacing(0) !important;
+  margin-top: nhsuk-spacing(0) !important;
+
+  @include govuk-media-query($until: tablet) {
+    margin-top: nhsuk-spacing(2) !important;
+    margin-bottom: nhsuk-spacing(2) !important;
   }
 }
 
